--- a/src/components/ImageItem.css
+++ b/src/components/ImageItem.css
@@ -2,7 +2,7 @@
     cursor: pointer;
     transition: transform 0.3s ease;
     overflow: hidden;
-    border-radius:15px;
+    border-radius: 5px;
 }
 
 .image-item:hover {
@@ -14,4 +14,10 @@
     height: 200px;
     object-fit: cover;
     display: block;
+}
+
+@media (max-width: 480px) {
+    .image-item img {
+        height: 150px;
+    }
 }
